# city-dashboard

./: .gitignore  LOG_WINDOW_IMPLEMENTATION_GUIDE.md  README.md  SSE_EVENTS_GUIDE.md  SSE_TROUBLESHOOTING.md  frontend.wasm  test_sse_server.py
.github/: WORKFLOW_INSTRUCTIONS.md
.github/workflows/: deploy-pages.yml
backend/: Cargo.toml  README.md
backend/src/: events.rs  main.rs
frontend/: Cargo.toml  REFACTORING_SUGGESTIONS.md  REFACTOR_LOG.md  WASM_DEPLOYMENT.md  build_wasm.sh  index.html
frontend/src/: block.rs  car.rs  city.rs  constants.rs  events.rs  input.rs  intersection.rs  led_chars.rs  led_display_object.rs  logging.rs  main.rs  models.rs  rendering.rs  road.rs  spawner.rs  sse_client.rs  traffic_light.rs
frontend/src/block/: building.rs  fence.rs  generation.rs  grass.rs  mod.rs
frontend/src/rendering/: environment.rs  led_display.rs  mod.rs  roads.rs  utils.rs  vehicles.rs
