[package]
name = "frontend"
version = "0.1.0"
edition = "2024"

[dependencies]
macroquad = "0.4.14"
ureq = { version = "2.10", default-features = false, features = ["json"] }  # Disable TLS for WASM compatibility
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"   # JSON parsing for events
getrandom = { version = "0.2", features = ["js"] }  # Required for WASM builds
