[package]
name = "frontend"
version = "0.1.0"
edition = "2024"

[dependencies]
macroquad = "0.4.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"   # JSON parsing for events
getrandom = { version = "0.2", features = ["js"] }  # Required for WASM builds

# Use TLS for native builds, disable for WASM
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ureq = { version = "2.10", features = ["json", "tls"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
ureq = { version = "2.10", default-features = false, features = ["json"] }
